Last version with ByteBuddy Agent?